--- a/src/python3_course_for_devs/notebooks/function.ipynb
+++ b/src/python3_course_for_devs/notebooks/function.ipynb
@@ -11,14 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 写一个简单的函数\n",
-    "\n",
-    "定义一个函数，它接收一个姓名参数，并返回打招呼信息。\n"
+    "## 定义函数\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -27,12 +25,15 @@
        "'你好, 开发者'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 函数 hello 接收一个姓名参数，并返回打招呼信息\n",
+    "\n",
+    "\n",
     "def hello(name):\n",
     "    return f\"你好, {name}\"\n",
     "\n",
@@ -44,178 +45,185 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 参数\n",
+    "## 函数传参\n",
     "\n",
-    "函数传参是一次赋值操作。对于 `可变类型` 是引用拷贝，对于 `不可变类型` 是值拷贝，具体解释看[拷贝]('./copy.ipynb')这节。\n"
+    "函数传参类似于进行 [赋值操作](./copy.ipynb)。\n",
+    "如果参数是不可变对象，那么传参过程为值传递。\n",
+    "如果参数是可变对象，那么传参过程为引用传递。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**必需参数 / 非必需参数**\n",
+    "**必需参数、非必需参数**\n",
     "\n",
-    "- 非必需参数：有默认值\n",
-    "- 必需参数：无默认值\n"
+    "- 必需参数：必传参数，如果参数没有默认值，那么则为必需参数\n",
+    "- 非必需参数：非必传参数，如果参数有默认值，那么则为非必需参数\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 位置参数 & 关键字参数\n",
+    "**位置参数、关键字参数**\n",
     "\n",
-    "位置参数是按照它们在函数定义中出现的顺序进行传递的参数。调用函数时，位置参数需要按照函数定义中参数的顺序进行传递，且数量必须匹配。位置参数的顺序和数量是非常重要的，因为它们决定了参数的对应关系。\n",
+    "- 位置参数：按照定义顺序传递参数\n",
+    "- 关键字参数：通过参数名传递参数\n",
     "\n",
-    "关键字参数是通过参数名称进行传递的参数。调用函数时，可以明确指定每个参数的名称和对应的值，而不必按照参数定义的顺序。这种方式使得函数调用更加清晰和可读，并且可以更灵活地选择传递哪些参数。\n",
-    "\n",
-    "关键字参数可以与位置参数混合使用。当使用混合方式时，位置参数必须在关键字参数之前传递。\n"
+    "位置参数与关键字参数一起使用时，位置参数必须在关键字参数之前。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "你好, 永强\n",
-      "你好, 永强\n",
-      "你好, 永强\n"
+      "你好, 开发者\n",
+      "你好, 开发者\n",
+      "你好, 开发者\n"
      ]
     }
    ],
    "source": [
-    "# 参数 name 没有默认值，是必需参数\n",
-    "# 参数 greeting 有默认值，是非必需参数\n",
+    "# 参数 name 是必需参数\n",
+    "# 参数 greeting 和 separator 是非必需参数\n",
     "def greet(name, greeting=\"hello\", separator=\",\"):\n",
     "    print(f\"{greeting}{separator} {name}\")\n",
     "\n",
     "\n",
     "# 位置参数\n",
-    "greet(\"永强\", \"你好\")\n",
+    "greet(\"开发者\", \"你好\")\n",
     "\n",
     "# 关键字参数\n",
-    "greet(greeting=\"你好\", name=\"永强\")\n",
+    "greet(greeting=\"你好\", name=\"开发者\")\n",
     "\n",
-    "# 位置参数与关键字参数混用，关键字参数后面不能再有位置参数\n",
-    "greet(\"永强\", greeting=\"你好\", separator=\",\")"
+    "# 位置参数与关键字参数一起使用，位置参数在前\n",
+    "greet(\"开发者\", greeting=\"你好\", separator=\",\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 不定长参数\n",
+    "**不定长参数**\n",
     "\n",
-    "参数带一个星号 `*` 用于收集任意数量的位置参数并打包成元组，而参数带两个星号 `**` 用于收集任意数量的关键字参数并打包成字典。\n"
+    "- 参数带一个星 `*`：用于收集任意数量的位置参数并打包成元组\n",
+    "- 参数带两个星 `**`：用于收集任意数量的关键字参数并打包成字典\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "你好, 永强 ('小美', '小帅', '大壮')\n"
+      "你好, 开发者 ('前端', '服务端', '客户端')\n",
+      "<class 'tuple'>\n"
      ]
     }
    ],
    "source": [
     "def greet_more(name, greeting=\"hello\", separator=\",\", *other):\n",
     "    print(f\"{greeting}{separator} {name} {other}\")\n",
+    "    print(type(other))\n",
     "\n",
     "\n",
-    "greet_more(\"永强\", \"你好\", \",\", \"小美\", \"小帅\", \"大壮\")"
+    "greet_more(\"开发者\", \"你好\", \",\", \"前端\", \"服务端\", \"客户端\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "你好, 永强 {'a': '小美', 'b': '小帅', 'c': '大壮'}\n"
+      "你好, 开发者 {'fe': '前端', 'be': '服务端', 'app': '客户端'}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
     "def greet_more(name, greeting=\"hello\", separator=\",\", **other):\n",
     "    print(f\"{greeting}{separator} {name} {other}\")\n",
+    "    print(type(other))\n",
     "\n",
     "\n",
-    "greet_more(\"永强\", \"你好\", \",\", a=\"小美\", b=\"小帅\", c=\"大壮\")"
+    "greet_more(\"开发者\", \"你好\", \",\", fe=\"前端\", be=\"服务端\", app=\"客户端\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 强制位置参数 & 强制关键字参数\n",
+    "**强制位置参数、强制关键字参数**\n",
     "\n",
-    "符号 `/` 之前的参数被视为位置参数，调用函数时必须按照它们在函数定义中的顺序提供参数值\n",
-    "\n",
-    "符号 `*` 之后的参数将被视为关键字参数，调用函数时必须通过参数名称指定参数值\n"
+    "- 符号 `/` 之前的参数被视为位置参数\n",
+    "- 符号 `*` 之后的参数将被视为关键字参数\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 20 30 40 50 60\n"
+      "1 2 3 4 5 6\n"
      ]
     }
    ],
    "source": [
-    "def f(a, b, /, c, d, *, e, f):\n",
+    "def foo(a, b, /, c, d, *, e, f):\n",
     "    print(a, b, c, d, e, f)\n",
     "\n",
     "\n",
-    "f(10, 20, 30, d=40, e=50, f=60)"
+    "foo(1, 2, 3, d=4, e=5, f=6)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## lambda 函数\n",
+    "## `lambda` 函数\n",
     "\n",
-    "Lambda 函数是一种匿名函数，它是一种用于创建简单函数的一行代码的快捷方式。Lambda 函数通常用于需要一个函数对象的地方，但只需要一个简单的表达式来定义函数逻辑。\n",
+    "`Lambda` 函数是用一行代码定义的一个匿名函数。\n",
     "\n",
-    "Lambda 函数语法：\n",
-    "\n",
-    "`lambda 参数列表: 执行语句`\n"
+    "语法：`lambda 参数列表: 执行语句`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "add = lambda x, y: x + y\n",
-    "print(add(3, 5))  # 输出：8"
+    "\n",
+    "add(1, 2)"
    ]
   }
  ],
