--- a/src/python3_course_for_devs/notebooks/bool.ipynb
+++ b/src/python3_course_for_devs/notebooks/bool.ipynb
@@ -4,120 +4,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# truth & falsity\n",
+    "# 真假值\n",
     "\n",
-    "真假值：真值表示一个条件或表达式在逻辑上为真的值，而假值表示一个条件或表达式在逻辑上为假的值。\n",
-    "\n",
-    "tip：python 中布尔类型实际上是整型 int 的子类型，这意味着布尔类型是由整型类型派生而来的，具有整型类型的所有特性和行为。\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "True == 1"
+    "- 真值（`Truth`）：布尔真（`True`）或条件真（条件表达式计算结果为真）\n",
+    "- 假值（`Falsity`）：布尔假（`False`）或条件假（条件表达式计算结果为假）\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 真值（Truth）\n",
+    "**真**\n",
     "\n",
-    "- 布尔真：`True`\n",
+    "- `True`\n",
     "- 非零数字\n",
-    "- 非空容器类型（列表、元组、字典、集合等）: 如果容器中元素不为空，则为真\n"
+    "- 非空字符串\n",
+    "- 非空[容器](./types.ipynb)：列表、元组、字典、集合\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 假值（Falsity）\n",
+    "**假**\n",
     "\n",
-    "- 布尔假：`False`\n",
-    "- 数字类型零值：整数 `0`、浮点数 `0.0`、复数 `0j`\n",
-    "- 空序列：空列表 `[]`、空元组 `()`、空字符串 `''`\n",
-    "- 空字典：`{}`\n",
-    "- 空集合：`set()`\n",
+    "- `False`\n",
+    "- 数字零：整数 `0`、浮点数 `0.0`、复数 `0j`\n",
+    "- 空字符串 `''`\n",
+    "- 空[容器](./types.ipynb)：空列表 `[]`、空元组 `()`、空字典 `{}`、空集合 `set()`\n",
     "- `None`\n"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, False, False, False, False, False, False, False]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "falsities = [False, 0, 0.0, 0j, [], (), \"\", set(), {}, None]\n",
+    "\n",
+    "[bool(item) for item in falsities]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 自定义真假值对象\n",
+    "**自定义真假值对象类**\n",
     "\n",
-    "在判断一个对象真假值的时候，对象会被依次调用两个内置方法 `__bool__` 和 `__len__`\n",
-    "\n",
-    "如果 `__bool__` 存在，则使用 `__bool__` 的返回值作为这个对象的真假值，\n",
-    "\n",
-    "否则则通过 `__len__` 返回的长度值来判断对象的真假值（由于数字类型实现了 `__bool__`，所以长度值会被转为布尔型），长度不为空则为真，空则为假\n"
+    "判断对象真假时，首先会尝试调用对象魔术方法 `__bool__`，并使用其返回值作为对象真假值，如果 `__bool__` 未定义则执行 `__len__`，使用对象长度判断真假，长度不空为真，空为假。\n",
+    "如果 `__bool__` 和 `__len__` 都未定义，对象默认为真。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<slot wrapper '__len__' of 'set' objects>"
+       "False"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 内置了 __bool__ 方法的类型\n",
-    "int.__bool__\n",
-    "bool.__bool__\n",
-    "float.__bool__\n",
-    "complex.__bool__\n",
-    "\n",
-    "# 内置了 __len__ 方法的类型\n",
-    "list.__len__\n",
-    "tuple.__len__\n",
-    "str.__len__\n",
-    "dict.__len__\n",
-    "set.__len__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[False, False, False, False, False, False, False, False, False, False, False]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "class MyObj:\n",
+    "class MyClass:\n",
     "    def __init__(self, data):\n",
     "        self.data = data\n",
     "\n",
@@ -128,9 +95,56 @@
     "        return len(self.data)\n",
     "\n",
     "\n",
-    "falsities = [False, 0, 0.0, 0j, [], (), \"\", set(), {}, None, MyObj(False)]\n",
-    "\n",
-    "[bool(item) for item in falsities]"
+    "bool(MyClass([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<slot wrapper '__bool__' of 'complex' objects>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 数字类型定义了 __bool__\n",
+    "int.__bool__\n",
+    "bool.__bool__\n",
+    "float.__bool__\n",
+    "complex.__bool__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<slot wrapper '__len__' of 'set' objects>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 字符串和容器类型定义了 __len__\n",
+    "str.__len__\n",
+    "list.__len__\n",
+    "tuple.__len__\n",
+    "dict.__len__\n",
+    "set.__len__"
    ]
   }
  ],
