--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -202,9 +202,7 @@
     "\n",
     "当你尝试改变一个被声明为 `Final` 的变量的类型时，pylance 会进行错误提示，告诉你变量无法重新分配。\n",
     "\n",
-    "注意：\n",
-    "\n",
-    "`Final` 依然不能真正阻止变量的修改，它依然只是一种约定和提示。但类型提示工具可以根据这些注释提供静态类型检查和代码补全等功能，这足够帮助我们避免一些常见的错误。\n"
+    "> `Final` 依然不能真正阻止变量的修改，它依然只是一种约定和提示。但类型提示工具可以根据这些注释提供静态类型检查和代码补全等功能，这足够帮助我们避免一些常见的错误。\n"
    ]
   },
   {
