--- a/src/python3_course_for_devs/notebooks/judgment.ipynb
+++ b/src/python3_course_for_devs/notebooks/judgment.ipynb
@@ -11,21 +11,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `if`\n",
-    "\n",
-    "```py\n",
-    "if 判断条件:\n",
-    "    执行语句\n",
-    "```\n",
+    "## `if`...`elif`...`else`\n",
     "\n",
     "`if` 后的判断条件为真则执行下面的语句，这里的“真”和“假”不是单纯的布尔类型的 `True` 和 `False`，而是逻辑上的真假值\n",
     "\n",
-    "关于真假值请务必阅读[真假值]('./bool.ipynb')这节的内容\n"
+    "> [真假值是什么？](./bool.ipynb)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
