--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "> 方法 `int` 通过调用对象内部的魔术方法 `__int__` 来创建整数对象。\n",
     "\n",
-    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+    "> [什么是魔术方法？](./magic_method.ipynb)\n"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "source": [
     "- 由布尔型创建\n",
     "\n",
-    "> Python 中布尔型是 `int` 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')。\n"
+    "> Python 中布尔型是 `int` 类型的子类型，详细解释在 [布尔型](./bool.ipynb)。\n"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "source": [
     "- 由布尔型创建\n",
     "\n",
-    "> Python 中布尔型是 int 类型的子类型，详细解释在 [布尔型]('./bool.ipynb')。\n"
+    "> Python 中布尔型是 int 类型的子类型，详细解释在 [布尔型](./bool.ipynb)。\n"
    ]
   },
   {
