--- a/src/python3_course_for_devs/notebooks/set.ipynb
+++ b/src/python3_course_for_devs/notebooks/set.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> `set` 方法可以根据 [可迭代对象]('./iterator_generator.ipynb') 创建集合。\n"
+    "> `set` 方法可以根据 [可迭代对象](./iterator_generator.ipynb) 创建集合。\n"
    ]
   },
   {
