--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 字符串\n",
     "\n",
-    "字符串是 [序列类型]('./types.ipynb')。\n",
+    "字符串是 [序列类型](./types.ipynb)。\n",
     "\n",
     "先回想一下 `序列类型` 的特性有哪些。\n"
    ]
