--- a/src/python3_course_for_devs/notebooks/tuple.ipynb
+++ b/src/python3_course_for_devs/notebooks/tuple.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 元组\n",
     "\n",
-    "元组是 [序列类型]('./types.ipynb')。\n",
+    "元组是 [序列类型](./types.ipynb)。\n",
     "\n",
     "元组与列表不同，元组是不可变对象，因此，经过优化的元组比列表内存占用更少，迭代效率更高。\n"
    ]
