--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -173,7 +173,7 @@
                 "\n",
                 "字符串、元组、列表、集合和字典都是可迭代的。\n",
                 "\n",
-                "详细介绍看[迭代器 & 可迭代对象 & 生成器]('./iterator_generator.ipynb')\n"
+                "详细介绍看[迭代器 & 可迭代对象 & 生成器](./iterator_generator.ipynb)\n"
             ]
         },
         {
