--- a/src/python3_course_for_devs/notebooks/var.ipynb
+++ b/src/python3_course_for_devs/notebooks/var.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "> 在类型注解中指定的类型只是一种提示，它并不限制变量的实际类型。因此，通过类型注解过的变量仍然可以在后续被修改为不同的类型。\n",
     "\n",
-    "下面我通过 [元组解包]('./tuple.ipynb') 的方式将上面的变量 `x` 和 `y` 的值进行了互换。\n"
+    "下面我通过 [元组解包](./tuple.ipynb) 的方式将上面的变量 `x` 和 `y` 的值进行了互换。\n"
    ]
   },
   {
