--- a/src/python3_course_for_devs/notebooks/bool.ipynb
+++ b/src/python3_course_for_devs/notebooks/bool.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 真假值\n",
+    "# 真假\n",
     "\n",
-    "- 真值（`Truth`）：布尔真（`True`）或条件真（条件表达式计算结果为真）\n",
-    "- 假值（`Falsity`）：布尔假（`False`）或条件假（条件表达式计算结果为假）\n"
+    "- 真（`Truth`）：真值或[条件真](./judgment.ipynb)（条件表达式计算结果为真）\n",
+    "- 假（`Falsy`）：假值或[条件假](./judgment.ipynb)（条件表达式计算结果为假）\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**真**\n",
+    "**真值**\n",
     "\n",
-    "- `True`\n",
+    "- 布尔真：`True`\n",
     "- 非零数字\n",
     "- 非空字符串\n",
     "- 非空[容器](./types.ipynb)：列表、元组、字典、集合\n"
@@ -26,9 +26,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**假**\n",
+    "**假值**\n",
     "\n",
-    "- `False`\n",
+    "- 布尔假：`False`\n",
     "- 数字零：整数 `0`、浮点数 `0.0`、复数 `0j`\n",
     "- 空字符串 `''`\n",
     "- 空[容器](./types.ipynb)：空列表 `[]`、空元组 `()`、空字典 `{}`、空集合 `set()`\n",
@@ -63,8 +63,7 @@
    "source": [
     "**自定义真假值对象类**\n",
     "\n",
-    "判断对象真假时，首先会尝试调用对象魔术方法 `__bool__`，并使用其返回值作为对象真假值，如果 `__bool__` 未定义则执行 `__len__`，使用对象长度判断真假，长度不空为真，空为假。\n",
-    "如果 `__bool__` 和 `__len__` 都未定义，对象默认为真。\n"
+    "判断对象真假时，首先会尝试调用对象魔术方法 `__bool__`，并使用其返回值作为对象真假值，如果 `__bool__` 未定义则执行 `__len__`，使用对象长度判断真假，长度不空为真，空为假。\n"
    ]
   },
   {
