--- a/src/python3_course_for_devs/notebooks/judgment.ipynb
+++ b/src/python3_course_for_devs/notebooks/judgment.ipynb
@@ -13,14 +13,12 @@
    "source": [
     "## `if`...`elif`...`else`\n",
     "\n",
-    "`if` 后的判断条件为真则执行下面的语句，这里的“真”和“假”不是单纯的布尔类型的 `True` 和 `False`，而是逻辑上的真假值\n",
-    "\n",
-    "> [真假值是什么？](./bool.ipynb)\n"
+    "根据条件表达式真假值控制代码执行路径。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -32,8 +30,6 @@
     }
    ],
    "source": [
-    "### `if elif else`\n",
-    "\n",
     "score = 8.5\n",
     "\n",
     "if score >= 9:\n",
@@ -48,16 +44,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `match case`\n",
+    "## `match`...`case`\n",
     "\n",
-    "`match case` 使用严格匹配规则，也就是值和类型都要匹配\n",
+    "根据严格匹配结果（值和类型都匹配）执行相应代码块。\n",
     "\n",
-    "tip：`_` 可以匹配所有条件\n"
+    "> `_` 可以匹配所有条件。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +79,252 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "比较运算符\n"
+    "### 条件表达式\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "逻辑运算符\n"
+    "- 比较表达式\n",
+    "\n",
+    "  使用比较运算符（`<`、`>`、`<=`、`>=`、`==`、`!=` 等）比较两个值之间的关系。无法跨类型比较。\n",
+    "\n",
+    "> 布尔和数字可以比较，因为布尔是整型子类型。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 > 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True > 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**元素逐个比较**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"ab\" > \"a\"  # 字符串基于字符 Unicode 码点比较"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1] > [2]  # 列表比较"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1) > (2)  # 元组比较"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{1} > {2}  # 集合比较"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 逻辑表达式\n",
+    "\n",
+    "  使用逻辑运算符（`and`、`or`、`not` 等）将多个条件组合起来进行逻辑判断。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 > 1 and \"b\" > \"a\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 成员关系表达式\n",
+    "\n",
+    "  使用关键字 `in` 或 `not in` 判断一个值是否属于某个字符串或 [容器类型](./types.ipynb)。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"a\" in \"abc\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 in [1, 2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 身份判断表达式\n",
+    "\n",
+    "  使用关键字 `is` 或 `is not` 判断两个可变对象是否指向同一内存。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1] is [1]"
    ]
   }
  ],
