--- a/src/python3_course_for_devs/notebooks/loop.ipynb
+++ b/src/python3_course_for_devs/notebooks/loop.ipynb
@@ -4,60 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 循环操作\n"
+    "# 循环\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `while`\n",
-    "\n",
-    "```py\n",
-    "while 判断条件：\n",
-    "    执行语句\n",
-    "```\n"
+    "### `while`...`else`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "count = 0\n",
-    "while count < 3:\n",
-    "    print(count)\n",
-    "    count = count + 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `while else`\n",
-    "\n",
-    "```py\n",
-    "while 判断条件：\n",
-    "    执行语句\n",
-    "else:\n",
-    "    执行语句\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +26,7 @@
       "0\n",
       "1\n",
       "2\n",
-      "3 >= 3\n"
+      "3 完成\n"
      ]
     }
    ],
@@ -77,58 +36,19 @@
     "    print(count)\n",
     "    count = count + 1\n",
     "else:\n",
-    "    print(count, \">= 3\")"
+    "    print(count, \"完成\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `for`\n",
-    "\n",
-    "```py\n",
-    "for 元素 in 可迭代对象:\n",
-    "    执行语句\n",
-    "```\n"
+    "### `for`...`else`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for x in range(3):\n",
-    "    print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `for else`\n",
-    "\n",
-    "```py\n",
-    "for 元素 in 可迭代对象:\n",
-    "    执行语句\n",
-    "else:\n",
-    "    执行语句\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +58,7 @@
       "0\n",
       "1\n",
       "2\n",
-      "2 >= 3\n"
+      "2 完成\n"
      ]
     }
    ],
@@ -146,21 +66,19 @@
     "for x in range(3):\n",
     "    print(x)\n",
     "else:\n",
-    "    print(x, \">= 3\")"
+    "    print(x, \"完成\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 跳过本轮循环\n",
-    "\n",
-    "`continue`\n"
+    "### `continue` 跳过本轮循环\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -183,14 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 跳出循环\n",
-    "\n",
-    "`break`\n"
+    "### `break` 终止循环\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
