--- a/src/python3_course_for_devs/notebooks/scope.ipynb
+++ b/src/python3_course_for_devs/notebooks/scope.ipynb
@@ -13,18 +13,16 @@
    "source": [
     "## 命名空间\n",
     "\n",
-    "命名空间可以被看作是一个字典或类似字典的对象，用于存储变量名和对应对象之间的映射关系。当你在一个作用域中定义一个变量时，这个变量就会被存储在该作用域对应的命名空间中。\n",
-    "\n",
-    "不同作用域的命名空间是相互独立的，它们之间不会相互干扰。这意味着在一个作用域内定义的变量不会影响到其他作用域中同名的变量。\n"
+    "命名空间是用于存储标识符（变量、函数、类等）的容器。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 生命周期\n",
+    "**生命周期**\n",
     "\n",
-    "命名空间的生命周期可以与其所属的作用域相关联。命名空间是在创建对应作用域时动态生成的，并在作用域的生命周期内存在。命名空间的生命周期取决于其所属的作用域的创建和销毁过程。\n"
+    "命名空间在创建对应作用域时动态生成，与其所属的作用域的创建和销毁过程一致。\n"
    ]
   },
   {
@@ -33,55 +31,53 @@
    "source": [
     "## 作用域\n",
     "\n",
-    "在 Python 中，变量的作用域是指变量在程序中可见和可访问的范围。Python 有以下几种作用域：\n",
-    "\n",
-    "- Local（局部作用域）\n",
-    "- Enclosing (or Nonlocal)（嵌套作用域）\n",
-    "- Global（全局作用域）\n",
-    "- Built-in（内置作用域）\n",
-    "\n",
-    "当引用一个变量时，解释器会按照以下顺序在不同的作用域的命名空间中查找变量：局部作用域 -> 嵌套作用域 -> 全局作用域 -> 内置作用域。这就是所谓的 `LEGB` 规则。\n"
+    "指代码中标识符的可见范围。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 全局作用域\n",
+    "**局部作用域**\n",
     "\n",
-    "全局作用域（Global Scope）是在模块级别定义的变量的作用域。这意味着在模块中定义的变量可以在整个模块中的任何地方访问。全局变量在模块加载时被创建，并在整个程序的执行过程中一直存在，直到程序结束或模块被卸载。\n"
+    "指函数内部作用域。局部作用域只在函数内部可见，在函数执行期间创建，并在函数执行完毕后被销毁。每次函数调用都会创建一个新的局部作用域。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 嵌套作用域\n",
+    "**封闭作用域 & 嵌套作用域**\n",
     "\n",
-    "嵌套作用域（Nested Scope）是指在一个函数内部定义的函数中的作用域。内部函数可以访问外部函数的变量和状态。嵌套作用域的作用范围包括外部函数及其嵌套函数的作用域。内部函数在定义时会捕获并保持对外部函数作用域的引用，形成了一个嵌套作用域链。内部函数可以在外部函数执行完毕后仍然访问外部函数的变量。\n"
+    "当在一个函数内部定义另一个函数时，内部函数可以访问外部函数的变量，而外部函数无法访问内部函数的变量。\n",
+    "外部函数是内部函数的封闭作用域，而内部函数是外部函数的嵌套作用域。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 局部作用域\n",
+    "**全局作用域**\n",
     "\n",
-    "局部作用域（Local Scope）是指在函数内部定义的变量的作用域。这些变量只能在函数内部访问，对于函数外部是不可见的。局部作用域可以防止变量名冲突，提供了封装和保护变量的机制。局部作用域的变量在函数执行期间创建，并在函数执行完毕后被销毁。每次函数调用都会创建一个新的局部作用域。\n"
+    "在整个程序中可见的作用域。全局作用域中定义的标识符都存在全局命名空间中。\n",
+    "\n",
+    "> 程序的基本执行单位是模块（Module）。\n",
+    "\n",
+    "> 模块是一个包含了 Python 可执行代码的文件。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 内置作用域\n",
+    "**内置作用域**\n",
     "\n",
-    "内置作用域（Built-in Scope）是指 Python 解释器提供的内置函数和变量的作用域，内置作用域是全局作用域的一部分，因此在全局作用域中可以直接访问和使用内置函数（如 `print`、`len` 等）和内置类型（如 `list`、`dict` 等），而无需导入或声明。\n"
+    "Python 解释器默认提供的一个作用域，其中包含了内置的函数和对象，可在程序任何地方访问，无需导入模块。内置作用域中定义的标识符都存在内置命名空间中。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -247,13 +243,13 @@
        " 'zip']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 查看内置属性和方法\n",
+    "# 打印内置命名空间\n",
     "import builtins\n",
     "\n",
     "dir(builtins)"
@@ -263,59 +259,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 闭包\n",
+    "### 作用域链\n",
     "\n",
-    "闭包（Closure）是通过在一个函数内部创建并返回另一个函数来实现的，内部函数可以访问外部函数的作用域，从而达到暴露外层函数作用域的目的。\n"
+    "**LEGB 规则**\n",
+    "\n",
+    "当引用一个变量时，解释器会按照以下顺序在不同作用域命名空间中查找变量：`局部作用域` -> `封闭作用域` -> `全局作用域` -> `内置作用域`。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在函数内部使用关键字 `global` 可以声明一个变量为全局变量\n",
+    "> 在函数内部使用关键字 `global` 可声明一个变量为全局变量。\n",
     "\n",
-    "在嵌套函数内部使用 `nonlocal` 关键字可以声明一个变量为上一级函数的局部变量\n"
+    "> 在嵌套函数内部使用关键字 `nonlocal` 可声明变量为其封闭作用域局部变量。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nested\n",
-      "local\n",
-      "global\n"
+      "嵌套作用域变量\n",
+      "全局变量 全局变量2\n"
      ]
     }
    ],
    "source": [
-    "# 全局作用域\n",
-    "x = \"global\"\n",
+    "global_var = \"全局变量\"\n",
     "\n",
     "\n",
-    "# 嵌套作用域\n",
     "def outer():\n",
-    "    # global x\n",
-    "    x = \"nested\"\n",
-    "    print(x)\n",
+    "    global global_var2  # 通过关键字在函数内部声明全局变量\n",
+    "    global_var2 = \"全局变量2\"\n",
     "\n",
-    "    # 局部作用域\n",
+    "    outer_var = \"封闭作用域变量\"\n",
+    "\n",
     "    def inner():\n",
-    "        # nonlocal x\n",
-    "        x = \"local\"\n",
-    "        print(x)\n",
+    "        nonlocal outer_var  # 通过关键字在嵌套函数内部引用封闭作用域变量\n",
+    "        outer_var = \"嵌套作用域变量\"\n",
     "\n",
-    "    # 闭包\n",
+    "    inner()\n",
+    "    print(outer_var)\n",
+    "\n",
+    "\n",
+    "outer()\n",
+    "\n",
+    "print(global_var, global_var2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 闭包\n",
+    "\n",
+    "在函数内部创建并返回另一个函数，从而暴露外层函数作用域。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def outer():\n",
+    "    x = 1\n",
+    "\n",
+    "    def inner():\n",
+    "        return x\n",
+    "\n",
     "    return inner\n",
     "\n",
     "\n",
-    "closure = outer()\n",
-    "closure()  # 执行闭包函数\n",
-    "print(x)"
+    "inner = outer()\n",
+    "\n",
+    "# 暴露外部函数作用域变量 x\n",
+    "inner()"
    ]
   }
  ],
