--- a/src/python3_course_for_devs/notebooks/comprehension.ipynb
+++ b/src/python3_course_for_devs/notebooks/comprehension.ipynb
@@ -4,32 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 推导式 & 生成器表达式\n",
-    "\n",
-    "推导式（Comprehension）是一种简洁的语法结构，用于创建新的列表（List）、字典（Dictionary）、集合（Set）或生成器（Generator）等可迭代对象。推导式可以通过在一行代码中定义和填充容器对象，避免了使用传统的循环结构的繁琐性。\n",
-    "\n",
-    "Python 中常见的推导式有列表推导式（List Comprehension）、字典推导式（Dictionary Comprehension）、集合推导式（Set Comprehension）和生成器推导式（Generator Comprehension）\n"
+    "# 推导式 & 生成器表达式\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 推导式\n"
+    "## 推导式\n",
+    "\n",
+    "推导式是一种简洁的语法结构，可在一行代码中定义和填充容器对象，避免了使用传统循环结构的繁琐性。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 列表推导式\n",
-    "\n",
-    "`[expression for item in iterable if condition]`\n"
+    "**列表推导式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +34,7 @@
        "[4, 16]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,14 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 集合推导式\n",
-    "\n",
-    "`{expression for item in iterable if condition}`\n"
+    "**集合推导式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +61,7 @@
        "{4, 16}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,14 +74,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 字典推导式\n",
-    "\n",
-    "`{key_expression: value_expression for item in iterable if condition}`\n"
+    "**字典推导式**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +88,7 @@
        "{'hi_hanmeimei': 'Hanmeimei'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,19 +111,19 @@
     "\n",
     "生成器表达式的优点在于它们按需生成值，避免了一次性生成所有值所带来的内存消耗。这使得它们特别适用于处理大型数据集或需要延迟计算的情况。通过迭代生成器对象，我们可以逐步获取值，而不需要一次性获取所有值。\n",
     "\n",
-    "tip：元组是不可变的数据结构，一旦创建，其元素无法更改。在推导式中，元素是根据迭代变量、可迭代对象和条件表达式生成的。由于元组的不可变性质，不能使用推导式动态生成元素。但可以通过使用 `tuple` 函数将生成器对象转换为元组，从而获取一个包含生成器所有值的元组。\n"
+    "> 元组是不可变的数据结构，一旦创建，其元素无法更改。在推导式中，元素是根据迭代变量、可迭代对象和条件表达式生成的。由于元组的不可变性质，不能使用推导式动态生成元素。但可以通过使用 `tuple` 函数将生成器对象转换为元组，从而获取一个包含生成器所有值的元组。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object <genexpr> at 0x1079f8900>\n",
+      "<generator object <genexpr> at 0x10eaae340>\n",
       "('Hanmeimei',)\n",
       "[]\n"
      ]
@@ -150,9 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, '(1,2)': 2}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dict(zip([\"a\", \"(1,2)\"], [1, 2]))"
    ]
