--- a/src/python3_course_for_devs/notebooks/class.ipynb
+++ b/src/python3_course_for_devs/notebooks/class.ipynb
@@ -11,13 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 定义\n",
+    "## 定义一个类\n",
     "\n",
-    "`self` 表示类的实例对象，在实例方法中用于访问和操作实例的属性和方法。\n",
+    "> 在实例方法中 `self` 表示类的实例对象，用于访问和操作实例的属性和方法。\n",
     "\n",
-    "`cls` 表示类对象，在类方法中用于操作类属性和调用类方法。\n",
+    "> 在类方法中 `cls` 表示类对象，用于操作类属性和调用类方法。\n",
     "\n",
-    "`__str__` 这种以双下划线开头和结尾的函数叫做[魔术方法]('./magic_method.ipynb')\n"
+    "> `__init__` 这种以双下划线开头和结尾的函数叫做 [魔术方法](./magic_method.ipynb)\n"
    ]
   },
   {
@@ -27,12 +27,12 @@
    "outputs": [],
    "source": [
     "class MyClass:\n",
-    "    public_attribute: str = \"类公共属性\"\n",
-    "    __private_attribute = \"类私有属性\"\n",
+    "    public_attribute: str = \"类的公有属性\"\n",
+    "    __private_attribute = \"类的私有属性\"\n",
     "\n",
     "    # 实例初始化\n",
     "    def __init__(self, instance_attribute):\n",
-    "        # 给实例对象添加一个属性 instance_attribute\n",
+    "        # 给实例对象添加属性 instance_attribute\n",
     "        self.instance_attribute = instance_attribute\n",
     "\n",
     "    # 公共方法\n",
