--- a/src/python3_course_for_devs/notebooks/comprehension.ipynb
+++ b/src/python3_course_for_devs/notebooks/comprehension.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## 推导式\n",
     "\n",
-    "推导式是一种简洁的语法结构，可在一行代码中定义和填充容器对象，避免了使用传统循环结构的繁琐性。\n"
+    "推导式是一种简洁的语法结构，可在一行代码中定义和填充容器对象。\n"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "[4, 16]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "{4, 16}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "{'hi_hanmeimei': 'Hanmeimei'}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,59 +105,100 @@
    "source": [
     "## 生成器表达式\n",
     "\n",
-    "生成器表达式的语法与推导式类似，但生成器表达式返回的是一个生成器对象，该对象为可迭代对象。\n",
+    "生成器表达式的语法与推导式类似，但生成器表达式返回的是一个可迭代的生成器对象。\n",
+    "通过迭代生成器对象，我们可以逐步获取值，而无需一次性获取所有值。\n",
     "\n",
-    "需要注意的是，生成器对象是一次性的，一旦遍历完毕后，它就不能再次遍历。如果需要重新遍历生成器对象，需要重新创建一个新的生成器对象。\n",
-    "\n",
-    "生成器表达式的优点在于它们按需生成值，避免了一次性生成所有值所带来的内存消耗。这使得它们特别适用于处理大型数据集或需要延迟计算的情况。通过迭代生成器对象，我们可以逐步获取值，而不需要一次性获取所有值。\n",
-    "\n",
-    "> 元组是不可变的数据结构，一旦创建，其元素无法更改。在推导式中，元素是根据迭代变量、可迭代对象和条件表达式生成的。由于元组的不可变性质，不能使用推导式动态生成元素。但可以通过使用 `tuple` 函数将生成器对象转换为元组，从而获取一个包含生成器所有值的元组。\n"
+    "> 生成器对象是一次性的，遍历一次后，无法再次遍历。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<generator object <genexpr> at 0x10eaae340>\n",
-      "('Hanmeimei',)\n",
-      "[]\n"
-     ]
-    }
-   ],
-   "source": [
-    "generator_obj = (name.title() for name in names if len(name) > 6)\n",
-    "\n",
-    "print(generator_obj)\n",
-    "\n",
-    "print(tuple(generator_obj))\n",
-    "\n",
-    "# generator_obj 已被遍历，无法再次遍历\n",
-    "print(list(generator_obj))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': 1, '(1,2)': 2}"
+       "<generator object <genexpr> at 0x10eaaeff0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dict(zip([\"a\", \"(1,2)\"], [1, 2]))"
+    "generator_obj = (name.title() for name in names if len(name) > 6)\n",
+    "\n",
+    "generator_obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "generator"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(generator_obj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 元组是 [不可变对象](./types.ipynb)，一旦创建，其元素无法更改，因此不能使用推导式动态生成元组。但 `tuple` 方法可根据生成器对象创建元组。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Hanmeimei',)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(generator_obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# generator_obj 已被遍历，再次遍历生成对象为空\n",
+    "list(generator_obj)"
    ]
   }
  ],
