--- a/src/python3_course_for_devs/notebooks/class.ipynb
+++ b/src/python3_course_for_devs/notebooks/class.ipynb
@@ -17,17 +17,17 @@
     "\n",
     "> 在类方法中 `cls` 表示类对象，用于操作类属性和调用类方法。\n",
     "\n",
-    "> `__init__` 这种以双下划线开头和结尾的函数叫做 [魔术方法](./magic_method.ipynb)\n"
+    "> `__init__` 这种以双下划线开头和结尾的函数叫做 [魔术方法](./magic_method.ipynb)。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyClass:\n",
-    "    public_attribute: str = \"类的公有属性\"\n",
+    "class ClassA:\n",
+    "    public_attribute: str = \"类的公共属性\"\n",
     "    __private_attribute = \"类的私有属性\"\n",
     "\n",
     "    # 实例初始化\n",
@@ -36,95 +36,143 @@
     "        self.instance_attribute = instance_attribute\n",
     "\n",
     "    # 公共方法\n",
-    "    # 可以在类的内部、子类和类的外部直接访问和调用\n",
     "    def public_method(self):\n",
     "        print(\"公共方法\")\n",
     "\n",
     "    # 受保护方法\n",
-    "    # 可以在类的内部、子类和类的外部进行访问。虽然约定上视为受保护，但并没有强制限制访问\n",
     "    def _protected_method(self):\n",
-    "        print(\"受保护方法\")\n",
+    "        print(\"受保护方法虽然约定上视为受保护，但并没有强制限制访问\")\n",
     "        # 在类内部调用私有方法\n",
     "        self.__private_method()\n",
     "\n",
     "    # 私有方法\n",
-    "    # 仅在类的内部可访问，无法通过类的外部直接访问\n",
     "    def __private_method(self):\n",
-    "        print(\"私有方法\", self.__private_attribute)\n",
+    "        print(\"私有方法仅在类内部可访问\", self.__private_attribute)\n",
     "\n",
     "    # 类方法\n",
     "    @classmethod\n",
     "    def class_method(cls):\n",
-    "        print(\"类方法可以操作\", cls.public_attribute)\n",
+    "        print(\"类方法可以操作\", cls)\n",
     "\n",
-    "    # 静态方法\n",
-    "    # 无法直接访问类属性，因为静态方法并不接收类对象参数\n",
+    "    # 类静态方法\n",
     "    @staticmethod\n",
     "    def static_method():\n",
-    "        print(\"静态方法\")"
+    "        print(\"类静态方法无法操作类\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**类操作**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'类公共属性'"
+       "'类的公共属性'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "obj1 = MyClass(\"实例属性 1\")\n",
-    "obj2 = MyClass(\"实例属性 2\")\n",
-    "\n",
-    "obj1.public_attribute  # 访问类属性"
+    "ClassA.public_attribute  # 公共属性访问"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "公共方法\n",
-      "受保护方法\n",
-      "私有方法 类私有属性\n"
+      "类方法可以操作 <class '__main__.ClassA'>\n"
      ]
     }
    ],
    "source": [
-    "# 对象方法访问\n",
-    "obj1.public_method()\n",
-    "obj1._protected_method()"
+    "ClassA.class_method()  # 类方法调用"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "类方法可以操作 类公共属性\n",
-      "静态方法\n"
+      "类静态方法无法操作类\n"
      ]
     }
    ],
    "source": [
-    "obj1.class_method()\n",
-    "obj1.static_method()"
+    "ClassA.static_method()  # 类静态方法调用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**实例操作**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 创建实例\n",
+    "obj_a = ClassA(\"实例属性 A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "公共方法\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 执行实例公共方法\n",
+    "obj_a.public_method()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "受保护方法虽然约定上视为受保护，但并没有强制限制访问\n",
+      "私有方法仅在类内部可访问 类的私有属性\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 执行实例受保护方法\n",
+    "obj_a._protected_method()"
    ]
   },
   {
@@ -136,45 +184,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyClassChild(MyClass):\n",
-    "    public_attribute: str = \"公共子类属性\"\n",
+    "class ClassAChild(ClassA):\n",
+    "    public_attribute: str = \"子类公共属性\"\n",
     "\n",
     "    def __init__(self, instance_attribute):\n",
-    "        # super 调用父类(超类)\n",
+    "        # super 调用父类\n",
     "        super().__init__(instance_attribute)\n",
     "\n",
-    "    # 公共方法重写\n",
+    "    # 方法重写\n",
     "    def public_method(self):\n",
     "        print(\"公共方法重写\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "公共子类属性\n",
-      "子实例属性\n",
-      "类方法可以操作 公共子类属性\n",
       "公共方法重写\n"
      ]
     }
    ],
    "source": [
-    "obj_clild = MyClassChild(\"子实例属性\")\n",
+    "obj_clild = ClassAChild(\"子实例属性\")\n",
     "\n",
-    "print(obj_clild.public_attribute)\n",
-    "print(obj_clild.instance_attribute)\n",
-    "\n",
-    "obj_clild.class_method()\n",
     "obj_clild.public_method()"
    ]
   },
@@ -187,44 +228,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyClass2:\n",
+    "class ClassB:\n",
     "    def __init__(self, instance_attribute) -> None:\n",
     "        self.instance_attribute = instance_attribute\n",
     "\n",
     "    def public_method(self):\n",
-    "        print(\"公共方法 MyClass2\")"
+    "        print(\"ClassB 公共方法\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<class '__main__.MyClassChild2'>, <class '__main__.MyClass'>, <class '__main__.MyClass2'>, <class 'object'>]\n",
+      "[<class '__main__.ClassABChild'>, <class '__main__.ClassA'>, <class '__main__.ClassB'>, <class 'object'>]\n",
       "公共方法\n"
      ]
     }
    ],
    "source": [
-    "class MyClassChild2(MyClass, MyClass2):\n",
+    "class ClassABChild(ClassA, ClassB):\n",
     "    def __init__(self):\n",
-    "        super().__init__(instance_attribute=\"父类1\")\n",
-    "        MyClass2.__init__(self, instance_attribute=\"父类2\")\n",
+    "        super().__init__(instance_attribute=\"父类 A\")\n",
+    "        ClassB.__init__(self, instance_attribute=\"父类 B\")\n",
     "\n",
     "\n",
     "# 子类的继承顺序\n",
-    "print(MyClassChild2.mro())\n",
+    "print(ClassABChild.mro())\n",
     "\n",
-    "obj_child2 = MyClassChild2()\n",
-    "obj_child2.public_method()"
+    "obj_ab_child = ClassABChild()\n",
+    "obj_ab_child.public_method()"
    ]
   }
  ],
